possible to configure PBListener
git-svn-id: http://svn.plone.org/svn/collective/collective.buildbot/trunk@86326 db7f04ef-aaf3-0310-a811-c281ed44c4ad

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,9 @@
 0.3.4 SVN/Unreleased
 ====================
 
+  - Possible to configure ``PBListener``
+    [stxnext]
+
   - Added support for CVS repositories in project recipe. Location of code in
     CVS is described by `cvsroot` and `cvsmodule`. This two parameters are
     taken by spliting on `!` sign on repository location.
