--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,9 @@
 0.3.4 SVN/Unreleased
 ====================
 
+  - Remove useless imports in docs.
+    [gawel]
+
   - Possible to configure ``PBListener``
     [stxnext]
 
@@ -22,20 +25,10 @@
     [andrewb]
 
   - Completing work from r67547 (e.g. Fixed occurrences of
-    `email-notification-recipients` to the singular form as used in most 
-    places.).  When initializing collective.buildbot.project.Project we want 
-    to actually look for the singular version.  Additionally, we want our 
-    comment regarding notifications in master.cfg_tmpl to suggest the correct
-    value to be set. 
-
-    NB: If you're upgrading a collective.buildbot generated buildout 
-    environment from versions earlier than 0.3.2 and you configured
-    ``email-notification-recipients`` (as opposed to 
-    ``email-notification-recipient``) in your project declarations, **please
-    update** to use ``email-notification-recipient`` per the documentation 
-    that has shipped with collective.buildbot since version 0.3.2 prior to 
-    re-running buildout and stop/start or restarting your buildmaster and
-    buildslave(s).
+    `email-notification-recipients` to the plural form).  When initializing
+    collective.buildbot.project.Project we want to actually look for the plural
+    version.  Additionally, we want our comment regarding notifications in
+    master.cfg_tmpl to suggest the correct value to be set. 
     [andrewb]
 
   - Make timeout configurable, globally and independently for build
