--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,9 @@
-0.3.5 SVN/Unreleased
+0.3.5 (2009-07-17)
 ====================
+
+  - buildbot 0.7.11 compatibility
+
+  - various small fixes
 
 
 0.3.4 (2009-05-21)
