When using svn and you test multiple branches of the same project, you now get project_branch-a, project_branch-b instead of project_2, project_3. Named after the branch/tag name.
git-svn-id: http://svn.plone.org/svn/collective/collective.buildbot/trunk@95232 db7f04ef-aaf3-0310-a811-c281ed44c4ad

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 0.3.6 SVN/Unreleased
 ====================
 
+  - When using svn and you test multiple branches of the same project, you now
+    get project_branch-a, project_branch-b instead of project_2, project_3.
+    Named after the branch/tag name.
+    [reinout]
+
+
 0.3.5 (2009-07-17)
 ====================
 
