--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,10 @@
 0.3.6 SVN/Unreleased
 ====================
 
+  - Add possibility to use the default scheduler that triggers a build after
+    every change using a grace period waiting for more changes.
+    [witsch]
+
   - When using svn and you test multiple branches of the same project, you now
     get project_branch-a, project_branch-b instead of project_2, project_3.
     Named after the branch/tag name.
