--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -15,6 +15,9 @@
     for builders associated with that repository.
     [gldnspud]
 
+  - Pass options such as ``--verbose`` to a buildbot script as global options.
+    [gldnspud]
+
 
 0.3.5 (2009-07-17)
 ====================
